# HiveMind-Shared-compute

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Mac _Windows_Setup.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
Hivemind-Shared-Compute/: CONTRIBUTING.md  README.md
src/client/: run_node.py
src/hivemind/client/: cli.py  run_node.py
src/hivemind/common/: config.py  discovery.py  models.py
src/hivemind/network/: __init_.py  discovery.py  security.py  transport.py
src/network/: discovery.py  transport.py
