[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hivemind-shared-compute"
version = "0.1.0"
description = "Open-source platform for shared high-end computing: pool idle CPU/GPU/network resources across heterogeneous devices."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pyzmq",
    "zeroconf",           # for LAN peer discovery
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio",
    "ruff",
    "mypy",
    "black",
]

[project.scripts]
hivemind = "hivemind_shared_compute.client.cli:main"

[tool.setuptools.packages.find]
where = ["src"]